<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical" 
    android:gravity="center" 
    android:background="@drawable/background">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/relativeLayout1">
        <TextView android:gravity="center" android:text="@string/app_name" android:id="@+id/appName" android:layout_width="fill_parent" android:textSize="@integer/titleFontSize" android:layout_height="wrap_content" android:textColor="@color/titleColour"></TextView>
        <ImageView android:paddingTop="@dimen/image_padding" android:src="@drawable/logo" android:layout_width="fill_parent" android:id="@+id/splashImage" android:layout_height="wrap_content" android:paddingBottom="@dimen/image_padding" android:layout_below="@+id/appName"></ImageView>
        <TextView android:gravity="center" android:text="@string/version" android:id="@+id/version" android:layout_width="fill_parent" android:textSize="@integer/smallBody" android:layout_height="wrap_content" android:lineSpacingExtra="@integer/spacing" android:textColor="@color/defaultTextColour" android:layout_below="@+id/splashImage"></TextView>
        <TextView android:gravity="center" android:text="@string/author" android:id="@+id/author" android:layout_width="fill_parent" android:textSize="@integer/smallBody" android:layout_height="wrap_content" android:lineSpacingExtra="@integer/spacing" android:textColor="@color/defaultTextColour" android:layout_below="@+id/version"></TextView>
    </RelativeLayout>
	
</LinearLayout>
