<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical" 
    android:gravity="center" 
    android:background="@drawable/background" android:padding="@dimen/image_padding" android:id="@+id/FinishStatsScreen">
    <ScrollView android:layout_width="fill_parent" android:id="@+id/scrollView1" android:layout_height="fill_parent">
        <LinearLayout android:layout_width="fill_parent" android:id="@+id/linearLayout1" android:layout_height="fill_parent" android:orientation="vertical">
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/relativeLayout1" android:padding="@dimen/text_padding" android:layout_gravity="center">
                <TextView android:layout_height="wrap_content" android:textSize="@integer/smallSecondary" android:textColor="@color/defaultTextColour" android:text="@string/finish_saving_upload" android:id="@+id/finish_saving_upload" android:layout_width="wrap_content" android:layout_centerInParent="true"></TextView>
                <CheckBox android:checked="true" android:layout_height="wrap_content" android:id="@+id/finish_upload" android:layout_width="wrap_content" android:layout_toRightOf="@+id/finish_saving_upload"></CheckBox>
            </RelativeLayout>
            <LinearLayout android:layout_width="fill_parent" android:id="@+id/linearLayout2" android:padding="@dimen/text_padding" android:layout_height="fill_parent" android:orientation="vertical">
                <Button android:layout_width="fill_parent" android:text="@string/finish_saving_save_and_quit" android:id="@+id/finish_save_quit" android:layout_height="wrap_content"></Button>
                <Button android:layout_width="fill_parent" android:text="@string/finish_saving_quit_without_saving" android:id="@+id/finish_quit_no_save" android:layout_height="wrap_content"></Button>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
	
</LinearLayout>
